--- a/index.html
+++ b/index.html
@@ -3,39 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Control Inteligente de Pérdidas</title>
+  <title>Control Inteligente de Pérdidas – RAG & Donaciones</title>
 
   <style>
-    :root {
-      --bg: #0b1220;
-      --card: #0f172a;
-      --border: #1e293b;
-      --text: #e5e7eb;
-      --muted: #94a3b8;
-      --red: #ef4444;
-      --yellow: #facc15;
-      --green: #22c55e;
-    }
-
-    * { box-sizing: border-box; }
     body {
       margin: 0;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      background: linear-gradient(180deg, #020617, #020617 30%, #020617);
-      color: var(--text);
-    }
-
-    header {
-      padding: 20px;
-      font-size: 20px;
-      font-weight: 600;
-      border-bottom: 1px solid var(--border);
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      background: radial-gradient(circle at top, #0b1b33, #050914);
+      color: #fff;
     }
 
     .container {
-      padding: 16px;
-      max-width: 900px;
+      max-width: 720px;
       margin: auto;
+      padding: 20px;
+    }
+
+    h1 {
+      font-size: 22px;
+      margin-bottom: 20px;
     }
 
     .controls {
@@ -46,212 +32,196 @@
     }
 
     select, button {
-      background: var(--card);
-      color: var(--text);
-      border: 1px solid var(--border);
-      padding: 10px;
+      background: #0f172a;
+      color: #fff;
+      border: 1px solid #1e293b;
+      padding: 12px;
       border-radius: 10px;
       font-size: 14px;
     }
 
     button {
       cursor: pointer;
-      background: #111827;
+      background: #1e293b;
     }
 
     button:hover {
-      background: #1f2937;
+      background: #334155;
     }
 
     .error {
-      background: #450a0a;
-      border: 1px solid var(--red);
-      padding: 12px;
+      background: #3f0d0d;
+      border-left: 6px solid #dc2626;
+      padding: 14px;
       border-radius: 12px;
-      margin-bottom: 16px;
-      color: #fecaca;
-    }
-
-    .section {
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: 16px;
-      padding: 16px;
       margin-bottom: 20px;
     }
 
-    .section-title {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      font-weight: 600;
-      margin-bottom: 12px;
+    .section {
+      margin-bottom: 20px;
+      padding: 16px;
+      border-radius: 14px;
+      background: #020617;
+      border: 1px solid #020617;
     }
 
-    .alert {
-      border-left: 6px solid var(--red);
+    .alerta {
+      border-left: 6px solid #dc2626;
     }
 
-    .warn {
-      border-left: 6px solid var(--yellow);
+    .advertencia {
+      border-left: 6px solid #facc15;
     }
 
     .item {
       background: #020617;
-      border: 1px solid var(--border);
+      border: 1px solid #1e293b;
       border-radius: 12px;
       padding: 12px;
-      margin-bottom: 10px;
+      margin-top: 10px;
     }
 
-    .item strong {
-      display: block;
-      margin-bottom: 4px;
-    }
-
-    .muted {
-      color: var(--muted);
-      font-size: 13px;
-    }
-
-    footer {
+    .footer {
       text-align: center;
-      padding: 20px;
       font-size: 12px;
-      color: var(--muted);
+      color: #94a3b8;
+      margin-top: 40px;
     }
   </style>
 </head>
 
 <body>
+  <div class="container">
+    <h1>Control Inteligente de Pérdidas – RAG & Donaciones</h1>
 
-<header>
-  Control Inteligente de Pérdidas – RAG & Donaciones
-</header>
+    <div class="controls">
+      <select id="dias">
+        <option value="7">7 días</option>
+        <option value="14">14 días</option>
+        <option value="30">30 días</option>
+      </select>
 
-<div class="container">
+      <select id="sector">
+        <option value="ALL">Toda la sucursal</option>
+      </select>
 
-  <div class="controls">
-    <select id="dias">
-      <option value="7">7 días</option>
-      <option value="14">14 días</option>
-      <option value="30">30 días</option>
-    </select>
+      <button onclick="generarReporte()">Generar reporte</button>
+    </div>
 
-    <select id="sector">
-      <option value="ALL">Toda la sucursal</option>
-    </select>
+    <div id="error"></div>
+    <div id="resultado"></div>
 
-    <button onclick="generarReporte()">Generar reporte</button>
+    <div class="footer">
+      Control inteligente · Datos en tiempo real
+    </div>
   </div>
 
-  <div id="error"></div>
-  <div id="resultado"></div>
-
-</div>
-
-<footer>
-  Control inteligente · Datos en tiempo real
-</footer>
-
 <script>
-  // ✅ URL FINAL SIN CORS (PRODUCCIÓN)
-  const API_URL = "https://script.googleusercontent.com/macros/echo?user_content_key=REEMPLAZAR_POR_TU_KEY_REAL";
+/* ===============================
+   CONFIGURACIÓN DEFINITIVA
+   =============================== */
 
-  async function cargarSectores() {
-    try {
-      const res = await fetch(API_URL);
-      const data = await res.json();
+const API_URL = "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLinSnPuChMLpmL3HLTh7jyvjRx1e1wfH8tohBdYcJilAIhxFexmJFaDFnUKYR6dtZtdKNcPcDXzUohPZua9NULr_J14K3LIR2IjnOnDiohh0Q38HLTk1LI33BME60E4jgmmDCPrgILNPn9JufNln9Od0WH9iMGi3Y14WDUygyg3M8AsYZuK38Y6jQScEpJk_Iq8d2iK6Kce9kZPeqq8hkebC4pbxrl50OR60as1S1gTGjilX-ROxRKSkKGlMg";
 
-      const select = document.getElementById("sector");
-      data.sectores.forEach(s => {
-        const opt = document.createElement("option");
-        opt.value = s;
-        opt.textContent = s;
-        select.appendChild(opt);
-      });
-    } catch (e) {
-      mostrarError("No se pudieron cargar los sectores.");
-    }
-  }
+/* ===============================
+   CARGA DE SECTORES
+   =============================== */
 
-  async function generarReporte() {
-    limpiar();
+window.onload = cargarSectores;
 
-    const dias = document.getElementById("dias").value;
-    const sector = document.getElementById("sector").value;
+async function cargarSectores() {
+  try {
+    const res = await fetch(`${API_URL}&dias=7&sector=ALL`);
+    const data = await res.json();
 
-    try {
-      const res = await fetch(`${API_URL}&dias=${dias}&sector=${sector}`);
-      const data = await res.json();
+    if (!data.sectores) return;
 
-      if (data.error) {
-        mostrarError(data.error);
-        return;
-      }
+    const select = document.getElementById("sector");
+    select.innerHTML = `<option value="ALL">Toda la sucursal</option>`;
 
-      renderSeccion("ALERTAS", data.alertas, "alert");
-      renderSeccion("ADVERTENCIAS", data.advertencias, "warn");
-      renderRanking(data);
-
-    } catch (e) {
-      mostrarError("Error real al generar reporte.");
-    }
-  }
-
-  function renderSeccion(titulo, items, clase) {
-    if (!items || items.length === 0) return;
-
-    const div = document.createElement("div");
-    div.className = `section ${clase}`;
-
-    div.innerHTML = `<div class="section-title">${titulo}</div>`;
-
-    items.forEach(i => {
-      div.innerHTML += `
-        <div class="item">
-          <strong>${i.producto} (${i.sku})</strong>
-          <div class="muted">${i.motivo}</div>
-          <div class="muted">Evento máx: ${i.cantidad_evento_max} ${i.unidad}</div>
-          <div class="muted">Acumulado período: ${i.cantidad_acumulada_periodo}</div>
-        </div>
-      `;
+    data.sectores.forEach(s => {
+      const opt = document.createElement("option");
+      opt.value = s;
+      opt.textContent = s;
+      select.appendChild(opt);
     });
+  } catch {
+    mostrarError("No se pudieron cargar los sectores.");
+  }
+}
 
-    document.getElementById("resultado").appendChild(div);
+/* ===============================
+   GENERAR REPORTE
+   =============================== */
+
+async function generarReporte() {
+  document.getElementById("error").innerHTML = "";
+  document.getElementById("resultado").innerHTML = "";
+
+  const dias = document.getElementById("dias").value;
+  const sector = document.getElementById("sector").value;
+
+  try {
+    const res = await fetch(`${API_URL}&dias=${dias}&sector=${sector}`);
+    const data = await res.json();
+
+    if (data.error) throw new Error(data.error);
+
+    renderReporte(data);
+  } catch (e) {
+    mostrarError("Error real al generar reporte.");
+  }
+}
+
+/* ===============================
+   RENDER
+   =============================== */
+
+function renderReporte(data) {
+  let html = "";
+
+  if (data.alertas.length) {
+    html += `<div class="section alerta"><strong>ALERTAS</strong>`;
+    data.alertas.forEach(a => {
+      html += itemHTML(a);
+    });
+    html += `</div>`;
   }
 
-  function renderRanking(data) {
-    const div = document.createElement("div");
-    div.className = "section";
-
-    div.innerHTML = `
-      <div class="section-title">Resumen adicional</div>
-      <div class="item">
-        <strong>Producto más frecuente</strong>
-        <div class="muted">${data.mas_frecuente?.producto || "-"}</div>
-      </div>
-      <div class="item">
-        <strong>Producto con más RAG</strong>
-        <div class="muted">${data.mas_rag?.producto || "-"}</div>
-      </div>
-    `;
-
-    document.getElementById("resultado").appendChild(div);
+  if (data.advertencias.length) {
+    html += `<div class="section advertencia"><strong>ADVERTENCIAS</strong>`;
+    data.advertencias.forEach(a => {
+      html += itemHTML(a);
+    });
+    html += `</div>`;
   }
 
-  function mostrarError(msg) {
-    document.getElementById("error").innerHTML =
-      `<div class="error">❌ ${msg}</div>`;
+  if (!data.alertas.length && !data.advertencias.length) {
+    html += `<div class="section">Sin alertas en el período seleccionado.</div>`;
   }
 
-  function limpiar() {
-    document.getElementById("resultado").innerHTML = "";
-    document.getElementById("error").innerHTML = "";
-  }
+  document.getElementById("resultado").innerHTML = html;
+}
 
-  // Inicial
-  cargarSectores();
+function itemHTML(p) {
+  return `
+    <div class="item">
+      <strong>${p.producto} (${p.sku})</strong><br>
+      ${p.motivo}<br>
+      Evento máx: ${p.cantidad_evento_max} ${p.unidad}<br>
+      Acumulado período: ${p.cantidad_acumulada_periodo}
+    </div>
+  `;
+}
+
+/* ===============================
+   ERROR
+   =============================== */
+
+function mostrarError(msg) {
+  document.getElementById("error").innerHTML =
+    `<div class="error">❌ ${msg}</div>`;
+}
 </script>
 
 </body>
