--- a/index.html
+++ b/index.html
@@ -8,41 +8,45 @@
   <style>
     body {
       margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: radial-gradient(circle at top, #0b1b33, #050914);
-      color: #fff;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      background: radial-gradient(circle at top, #0b1b3a, #020617);
+      color: #e5e7eb;
     }
 
     .container {
-      max-width: 720px;
+      max-width: 900px;
       margin: auto;
-      padding: 20px;
+      padding: 24px;
     }
 
     h1 {
-      font-size: 22px;
-      margin-bottom: 20px;
+      font-size: 1.6rem;
+      margin-bottom: 24px;
     }
 
     .controls {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
       gap: 12px;
-      margin-bottom: 20px;
+      margin-bottom: 16px;
     }
 
     select, button {
-      background: #0f172a;
-      color: #fff;
-      border: 1px solid #1e293b;
       padding: 12px;
       border-radius: 10px;
-      font-size: 14px;
+      border: none;
+      font-size: 1rem;
+    }
+
+    select {
+      background: #0f172a;
+      color: #e5e7eb;
     }
 
     button {
-      cursor: pointer;
       background: #1e293b;
+      color: #fff;
+      cursor: pointer;
     }
 
     button:hover {
@@ -50,42 +54,29 @@
     }
 
     .error {
-      background: #3f0d0d;
-      border-left: 6px solid #dc2626;
+      background: #7f1d1d;
+      color: #fee2e2;
       padding: 14px;
-      border-radius: 12px;
-      margin-bottom: 20px;
+      border-radius: 10px;
+      margin-bottom: 16px;
     }
 
-    .section {
-      margin-bottom: 20px;
-      padding: 16px;
+    .card {
+      background: #020617;
       border-radius: 14px;
-      background: #020617;
-      border: 1px solid #020617;
+      padding: 16px;
+      margin-bottom: 16px;
+      border-left: 6px solid;
     }
 
-    .alerta {
-      border-left: 6px solid #dc2626;
-    }
-
-    .advertencia {
-      border-left: 6px solid #facc15;
-    }
-
-    .item {
-      background: #020617;
-      border: 1px solid #1e293b;
-      border-radius: 12px;
-      padding: 12px;
-      margin-top: 10px;
-    }
+    .alerta { border-color: #ef4444; }
+    .advertencia { border-color: #facc15; }
 
     .footer {
       text-align: center;
-      font-size: 12px;
-      color: #94a3b8;
-      margin-top: 40px;
+      opacity: 0.6;
+      margin-top: 32px;
+      font-size: 0.85rem;
     }
   </style>
 </head>
@@ -105,10 +96,10 @@
         <option value="ALL">Toda la sucursal</option>
       </select>
 
-      <button onclick="generarReporte()">Generar reporte</button>
+      <button id="btnGenerar">Generar reporte</button>
     </div>
 
-    <div id="error"></div>
+    <div id="mensajes"></div>
     <div id="resultado"></div>
 
     <div class="footer">
@@ -116,113 +107,86 @@
     </div>
   </div>
 
-<script>
-/* ===============================
-   CONFIGURACIÓN DEFINITIVA
-   =============================== */
+  <script>
+    const API_URL = "/.netlify/functions/getEventos";
 
-const API_URL = "https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLinSnPuChMLpmL3HLTh7jyvjRx1e1wfH8tohBdYcJilAIhxFexmJFaDFnUKYR6dtZtdKNcPcDXzUohPZua9NULr_J14K3LIR2IjnOnDiohh0Q38HLTk1LI33BME60E4jgmmDCPrgILNPn9JufNln9Od0WH9iMGi3Y14WDUygyg3M8AsYZuK38Y6jQScEpJk_Iq8d2iK6Kce9kZPeqq8hkebC4pbxrl50OR60as1S1gTGjilX-ROxRKSkKGlMg";
+    const mensajes = document.getElementById("mensajes");
+    const resultado = document.getElementById("resultado");
+    const selectSector = document.getElementById("sector");
+    const selectDias = document.getElementById("dias");
+    const btn = document.getElementById("btnGenerar");
 
-/* ===============================
-   CARGA DE SECTORES
-   =============================== */
+    function mostrarError(texto) {
+      mensajes.innerHTML = `<div class="error">❌ ${texto}</div>`;
+    }
 
-window.onload = cargarSectores;
+    function limpiar() {
+      mensajes.innerHTML = "";
+      resultado.innerHTML = "";
+    }
 
-async function cargarSectores() {
-  try {
-    const res = await fetch(`${API_URL}&dias=7&sector=ALL`);
-    const data = await res.json();
+    async function cargarSectores() {
+      try {
+        const res = await fetch(`${API_URL}?dias=7&sector=ALL`);
+        const data = await res.json();
 
-    if (!data.sectores) return;
+        if (!data.sectores) throw new Error();
 
-    const select = document.getElementById("sector");
-    select.innerHTML = `<option value="ALL">Toda la sucursal</option>`;
+        selectSector.innerHTML = `<option value="ALL">Toda la sucursal</option>`;
+        data.sectores.forEach(s => {
+          const opt = document.createElement("option");
+          opt.value = s;
+          opt.textContent = s;
+          selectSector.appendChild(opt);
+        });
 
-    data.sectores.forEach(s => {
-      const opt = document.createElement("option");
-      opt.value = s;
-      opt.textContent = s;
-      select.appendChild(opt);
-    });
-  } catch {
-    mostrarError("No se pudieron cargar los sectores.");
-  }
-}
+      } catch {
+        mostrarError("No se pudieron cargar los sectores.");
+      }
+    }
 
-/* ===============================
-   GENERAR REPORTE
-   =============================== */
+    async function generarReporte() {
+      limpiar();
 
-async function generarReporte() {
-  document.getElementById("error").innerHTML = "";
-  document.getElementById("resultado").innerHTML = "";
+      try {
+        const dias = selectDias.value;
+        const sector = selectSector.value;
 
-  const dias = document.getElementById("dias").value;
-  const sector = document.getElementById("sector").value;
+        const res = await fetch(`${API_URL}?dias=${dias}&sector=${encodeURIComponent(sector)}`);
+        const data = await res.json();
 
-  try {
-    const res = await fetch(`${API_URL}&dias=${dias}&sector=${sector}`);
-    const data = await res.json();
+        if (data.error) throw new Error(data.error);
 
-    if (data.error) throw new Error(data.error);
+        if (data.alertas.length === 0 && data.advertencias.length === 0) {
+          resultado.innerHTML = "<p>✔️ No se detectaron alertas ni advertencias.</p>";
+          return;
+        }
 
-    renderReporte(data);
-  } catch (e) {
-    mostrarError("Error real al generar reporte.");
-  }
-}
+        data.alertas.forEach(a => {
+          resultado.innerHTML += `
+            <div class="card alerta">
+              <strong>${a.producto} (${a.sku})</strong><br>
+              Evento máx: ${a.cantidad_evento_max} ${a.unidad}<br>
+              Acumulado período: ${a.cantidad_acumulada_periodo}
+            </div>`;
+        });
 
-/* ===============================
-   RENDER
-   =============================== */
+        data.advertencias.forEach(a => {
+          resultado.innerHTML += `
+            <div class="card advertencia">
+              <strong>${a.producto} (${a.sku})</strong><br>
+              Evento máx: ${a.cantidad_evento_max} ${a.unidad}<br>
+              Acumulado período: ${a.cantidad_acumulada_periodo}
+            </div>`;
+        });
 
-function renderReporte(data) {
-  let html = "";
+      } catch (e) {
+        mostrarError("Error real al generar reporte.");
+      }
+    }
 
-  if (data.alertas.length) {
-    html += `<div class="section alerta"><strong>ALERTAS</strong>`;
-    data.alertas.forEach(a => {
-      html += itemHTML(a);
-    });
-    html += `</div>`;
-  }
-
-  if (data.advertencias.length) {
-    html += `<div class="section advertencia"><strong>ADVERTENCIAS</strong>`;
-    data.advertencias.forEach(a => {
-      html += itemHTML(a);
-    });
-    html += `</div>`;
-  }
-
-  if (!data.alertas.length && !data.advertencias.length) {
-    html += `<div class="section">Sin alertas en el período seleccionado.</div>`;
-  }
-
-  document.getElementById("resultado").innerHTML = html;
-}
-
-function itemHTML(p) {
-  return `
-    <div class="item">
-      <strong>${p.producto} (${p.sku})</strong><br>
-      ${p.motivo}<br>
-      Evento máx: ${p.cantidad_evento_max} ${p.unidad}<br>
-      Acumulado período: ${p.cantidad_acumulada_periodo}
-    </div>
-  `;
-}
-
-/* ===============================
-   ERROR
-   =============================== */
-
-function mostrarError(msg) {
-  document.getElementById("error").innerHTML =
-    `<div class="error">❌ ${msg}</div>`;
-}
-</script>
-
+    btn.addEventListener("click", generarReporte);
+    cargarSectores();
+  </script>
 </body>
 </html>
